# openai-gpt-image-1-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py  utils.py
