[project]
name = "openai-gpt-image-1-mcp"
version = "0.1.3"
description = "MCP server for OpenAI GPT Image generation and editing capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0"
]